Make it more aligned so we can edit the header and footer correctly

--- a/public/pagedstyles.css
+++ b/public/pagedstyles.css
@@ -76,7 +76,6 @@
 
 .header-table__media {
   width: 45%;
-  padding: 0 8px 0 0;
   vertical-align: top;
 }
 
